# geometric-processing-engine

./: .gitignore  .polyscope.ini  README.md  examples.py  exemplo.py  indices_or.txt  pyproject.toml  spheretests.py  stencil_visualization.py  vecindices.txt  vectorHeat.py
output/: bunnyPT.vtk  connection_transport_vectors.txt  parallel_transport_vectors.txt  soccerballPT.vtk
outputs/: knotPT.vtk  torusPT.vtk  transport_comparison.txt
src/: .polyscope.ini  divdograd2d.py  divdograd3d.py  errorscomparison2d.py  examples.py  exemplo.py  heatequation.py  objtovtk.py  operators2d.py  operators3d-tests.py  poissonequation.py  spheretests.py  stencil.py  stencil_fazerfuncionar.py  stencil_visualization.py  testimport.py  transport.py  vectorHeat.py  vector_operators.py
src/buildoperators/: __init__.py  laplaceoperator.py
src/geo_cli/: divdograd2d.py  divdograd3d.py  errorscomparison2d.py  examples.py  exemplo.py  heatequation.py  heatequation2d.py  main.py  operators2d.py  operators3d-tests.py  poissonequation.py  poissonequation2d.py  spheretests.py  stencil.py  stencil_fazerfuncionar.py  stencil_visualization.py  transport.py  vectorHeat.py
src/geometric/: errorscomparison2d.py  main.py  operators3d-tests.py  stencil.py  testimport.py  transport.py
src/geommodules/: parallelTransport.py  pyvet.py  (+1 more)
tests/: test_laplacian.py  test_parallel_transport.py
verification/: X.txt  Y0normalized.txt  Y0real2N.txt  basisX.txt  basisY.txt  connection_laplacian_matrix.txt  laplacian_matrix.txt  mass_matrix.txt  mass_matrix_complex.txt  normal.txt  vectorOp.txt
(+19 files in other folders)
