[project]
name = "geometric-processing-engine"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "meshio>=5.3.5",
    "numba>=0.61.2",
    "numpy>=2.2.6",
    "polyscope>=2.4.0",
    "scipy>=1.15.3",
]

# [tool.setuptools]
# packages = ["pyvet"]

[tool.setuptools.packages.find]
where = ["src"]

# [tool.setuptools.package-dir]
# "pyvet" = "src/geopackages/pyvet"